PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/BranchesExpressions.pf
module DataStructures{

    Int x = 9

    fun main() : Int {
        if x < 3 && x >= 2{
            print(x)
        }

        if x < 3 and x >= 2{
            print(x)
        }

        if x < 3 || x >= 2{
            print(x)
                }

        if x < 3 or x >= 2{
            print(x)
        }

        if (x < 9 and x > 5) or x == 2{
            print(x)
        }

        if x == 9 {
            print(" but perfect!")
        }

        return 0
    }
}